[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-redteam"
version = "0.1.0"
description = "Adversarial security red-teaming harness for AI agents taking real-world actions"
readme = "README.md"
authors = [{ name = "Muneeb", email = "muneebsk77@gmail.com" }]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.24.0",
]

[project.scripts]
agentic-redteam = "agentic_redteam.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
