[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-redteam"
version = "0.5.0"
description = "Frontier-Grade AI Agent Red-Teaming & Security Benchmark Harness"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "SwishOS Security Team", email = "security@swishos.dev"}
]
keywords = ["ai-security", "red-team", "llm-benchmarking", "jailbreak-detection", "agentic-security"]
dependencies = [
    "pyyaml>=6.0",
    "cryptography>=41.0.0"
]

[project.scripts]
agentic-redteam = "agentic_redteam.cli:main"

[tool.setuptools.packages.find]
where = ["."]
