[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-redteam"
version = "1.0.0"
description = "Frontier-Grade AI Agent Red-Teaming & Security Benchmark Harness"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "SwishOS Security Team", email = "security@swishos.dev"}
]
keywords = ["ai-security", "red-team", "llm-benchmarking", "jailbreak-detection", "agentic-security", "sarif", "owasp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "cryptography>=41.0.0"
]

[project.urls]
Homepage = "https://swishos.dev"
Repository = "https://github.com/Muneeb7860/swishos-portfolio"
Documentation = "https://portfolio-eight-theta-fp2kdb67zc.vercel.app/en/playground"

[project.scripts]
agentic-redteam = "agentic_redteam.cli:main"

[tool.setuptools.packages.find]
where = ["."]

